method registration in register. binding all methods in register js

--- a/patient-react-app/public/manifest.json
+++ b/patient-react-app/public/manifest.json
@@ -16,6 +16,6 @@
   "start_url": "/",
   "scope":"/",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#303a46",
   "background_color": "#ffffff"
 }
