adding style modification to ant design.
less, less loader, react rewired and more dependencies added.
config overrides js file.

--- a/patient-react-app/public/manifest.json
+++ b/patient-react-app/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Mediworld",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "/mwfavicon.ico",
       "sizes": "150x150",
       "type": "image/x-icon"
     },
