--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "private": true,
   "dependencies": {
     "antd": "^3.18.1",
+    "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
     "less": "^3.9.0",
     "moment": "^2.24.0",
+    "path": "^0.12.7",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "start": "node server.js",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
